# HEIG_VD-21_22-PRG2

./: .gitignore  CMakeLists.txt  README.md  base.c
Chap1-Intro/: 1.01-Substitutions.c  1.02-Macros1.c  1.03-Macros2.c  1.04-BitOperator.c  1.05-BitN_RecoverIt.c  1.06-BitN_SetIt.c  1.07-GetLowestBitPos.c  1.08-BinaryViewOfInt.c  1.09-printf1.c  1.10-printf2.c  1.11-printf3.c  1.12-scanf.c  1.13-ReadMaxNCharOfStr.c  CMakeLists.txt
Chap3-CompTypes/: CMakeLists.txt
archivesTEs/: CMakeLists.txt
archivesTEs/2017_18/: TE3.c
archivesTEs/2020_21/: TE1.c  TE2_2b.c
archivesTEs/2021_22/: TE1.c  TE2.c  TE2_2b.c  TE2_5b.c
corr/Chap1-Intro/: 1.01-Substitutions.c  1.02-Macros1.c  1.03-Macros2.c  1.04-BitOperator.c  1.05-BitN_RecoverIt.c  1.06-BitN_SetIt.c  1.07-GetLowestBitPos.c  1.08-BinaryViewOfInt.c  1.09-printf1.c  1.10-printf2.c  1.11-printf3.c  1.12-scanf.c  1.13-ReadMaxNCharOfStr.c  CMakeLists.txt
corr/Chap2-Pointers/: 2.01-Basics.c  2.02-IOParam.c  2.03-FnWithPtrAsReturn.c  2.04-PtrInter.c  2.05-PtrWriting.c  2.06-PtrAffect.c  2.07-PtrArith_1.c  2.08-PtrArith_2.c  2.09-PtrArith_3.c  2.10-PtrArith_4.c  2.11-FormaPtrAndArray1D.c  2.12-InvertArray1D.c  2.12-InvertArray1D_1.c  2.13-Meli_Melo.c  2.14-TabPtrFn.c  2.15-Calloc.c  2.16-InvertArray1D_2.c  2.17-AdrMinMaxFromArray1D.c  2.18-MemManip_1.c  2.19-MemManip_2.c  2.20-MemManip_3.c  2.21-MatrixInit.c  2.22-SumMatrixValues.c  2.23-SquareMatrixDiag.c  2.24-Integral.c  CMakeLists.txt
corr/Chap3-CompTypes/: 3.01-ErrorCorr.c  3.02-PersonDisplay_1.c  3.03-PeopleDisplay.c  3.04-FollowingDayOfADate.c  3.05-StructSize.c  3.06-PersonDisplay_2.c  3.07-Boats.c  3.08-WeekDaysDisplay_1.c  3.09-WeekDaysDisplay_2.c  3.10-DynamicStack.c  CMakeLists.txt
corr/Chap4-CharString/: CMakeLists.txt
corr/Chap4-Strings/: 4.01-strlen.c  4.02-strcpy.c  4.03-strncpy.c  4.04-strcat.c  4.05-strncat.c  4.08-Names.c  4.09-StrInverter.c  CMakeLists.txt
corr/Chap5-Files/: 5.02-WriteBinFile.c  CMakeLists.txt
corr/Chap5-Files/5.01/: 5.01-ReadingWholeTextFile.c
demos/: lecture_int.c  printf_e.c
template/Chap1-Intro/: 1.01-Substitutions.c  1.02-Macros1.c  1.03-Macros2.c  1.04-BitOperator.c  1.05-BitN_RecoverIt.c  1.06-BitN_SetIt.c  1.07-GetLowestBitPos.c  1.08-BinaryViewOfInt.c  1.09-printf1.c  1.10-printf2.c  1.11-printf3.c  1.12-scanf.c  1.13-ReadMaxNCharOfStr.c
template/Chap2-Pointers/: 2.01-Basics.c  2.02-IOParam.c  2.03-FnWithPtrAsReturn.c  2.04-PtrInter.c  2.05-PtrWriting.c  2.06-PtrAffect.c  2.07-PtrArith_1.c  2.08-PtrArith_2.c  2.09-PtrArith_3.c  2.10-PtrArith_4.c  2.11-FormaPtrAndArray1D.c  2.12-InvertArray1D_1.c  2.13-Meli_Melo.c  2.14-TabPtrFn.c  2.15-Calloc.c  2.16-InvertArray1D_2.c  2.17-AdrMinMaxFromArray1D.c  2.18-MemManip_1.c  2.19-MemManip_2.c  2.20-MemManip_3.c  2.21-MatrixInit.c  2.22-SumMatrixValues.c  2.23-SquareMatrixDiag.c  2.24-Integral.c
template/Chap3-CompTypes/: 3.01-ErrorCorr.c  3.02-PersonDisplay_1.c  3.03-PeopleDisplay.c  3.04-FollowingDayOfADate.c  3.05-StructSize.c  3.06-PersonDisplay_2.c  3.07-Boats.c  3.08-WeekDaysDisplay_1.c  3.09-WeekDaysDisplay_2.c  3.10-DynamicStack.c
template/Chap4-Strings/: 4.01-strlen.c  4.02-strcpy.c  4.03-strncpy.c  4.04-strcat.c  4.05-strncat.c  4.06-strcmp.c  4.07-strchr.c  4.08-Names.c  4.09-StrInverter.c
template/Chap5-Files/5.01/: 5.01-ReadingWholeTextFile.c
template/Chap5-Files/5.02/: 5.02-WriteBinFile.c
