add_executable(1.01 1.01-Substitutions.c)
add_executable(1.02 1.02-Macros1.c)
add_executable(1.03 1.03-Macros2.c)
add_executable(1.04 1.04-BitOperator.c)
add_executable(1.05 1.05-BitN_RecoverIt.c)
add_executable(1.06 1.06-BitN_SetIt.c)
add_executable(1.07 1.07-GetLowestBitPos.c)
add_executable(1.08 1.08-BinaryViewOfInt.c)
add_executable(1.09 1.09-printf1.c)
add_executable(1.10 1.10-printf2.c)
add_executable(1.11 1.11-printf3.c)
add_executable(1.12 1.12-scanf.c)
add_executable(1.13 1.13-ReadMaxNCharOfStr.c)