
add_executable(2.01 2.01-Basics.c)
add_executable(2.02 2.02-IOParam.c)
add_executable(2.03 2.03-FnWithPtrAsReturn.c)
add_executable(2.04 2.04-PtrInter.c)
add_executable(2.05 2.05-PtrWriting.c)
add_executable(2.06 2.06-PtrAffect.c)
add_executable(2.07 2.07-PtrArith_1.c)
add_executable(2.08 2.08-PtrArith_2.c)
add_executable(2.09 2.09-PtrArith_3.c)
add_executable(2.10 2.10-PtrArith_4.c)
add_executable(2.11 2.11-FormaPtrAndArray1D.c)
add_executable(2.12 2.12-InvertArray1D_1.c)
add_executable(2.13 2.13-Meli_Melo.c)
add_executable(2.14 2.14-TabPtrFn.c)
add_executable(2.15 2.15-Calloc.c)
add_executable(2.16 2.16-InvertArray1D_2.c)
#add_executable(2.17 2.17-.c)
#add_executable(2.18 2.18-.c)
#add_executable(2.19 2.19-.c)
#add_executable(2.20 2.20-.c)
#add_executable(2.21 2.21-.c)
add_executable(2.22 2.22-SumMatrixValues.c)
add_executable(2.23 2.23-SquareMatrixDiag.c)
add_executable(2.24 2.24-Integral.c)
